--- a/css/style.css
+++ b/css/style.css
@@ -263,7 +263,7 @@ a {
 
 .c-proj-grid-ul {
     display: grid;
-    grid-template-columns: repeat(2, minmax(300px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     gap: 2em;
     list-style: none;
     margin: 5em 2em;
